--- a/MngrPaycheck.Administrator/View/Product/MainWindowProduct.xaml
+++ b/MngrPaycheck.Administrator/View/Product/MainWindowProduct.xaml
@@ -22,7 +22,7 @@
             </DockPanel>
         </Grid>
         <Grid Grid.Row="1" Grid.Column="0">
-            <Border Grid.Row="0" Grid.RowSpan="4" Background="#FFA7A7B6" BorderBrush="#FFA6A5A5"  BorderThickness="0,2,0,0">
+            <Border Grid.Row="0" Background="#FFA7A7B6" BorderBrush="#FFA6A5A5"  BorderThickness="0,2,0,0">
                 <Menu  FontSize="13" FontFamily="arial" Margin="2,2,2,2" >
                     <Label FontSize="10" FontFamily="Candara" FontStyle="Italic" Foreground="#FF595959">Main panel</Label>
                     <MenuItem Header="_Add a product" Command="{Binding ShowProductCommand}"  CommandParameter="{Binding ElementName=Pages}">
