--- a/MngrPaycheck/View/Style/StyleResourceDictionary.xaml
+++ b/MngrPaycheck/View/Style/StyleResourceDictionary.xaml
@@ -1,18 +1,15 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-
     <Style x:Key="lbl-header">
         <Setter Property="Label.FontWeight" Value="Bold"/>
         <Setter Property="Label.HorizontalAlignment" Value="Center"/>
         <Setter Property="Label.Margin" Value="-10"></Setter>
         <Setter Property="Label.FontSize" Value="17"></Setter>
     </Style>
-
     <Style x:Key="lbl-description" BasedOn="{StaticResource lbl-header}">
         <Setter Property="Label.FontWeight" Value="Normal"/>
         <Setter Property="Label.Margin" Value="-15"></Setter>
     </Style>
-
     <Style TargetType="Button" x:Key="TabButtonFirst">
         <Setter Property="Background" Value="White" />
         <Setter Property="TextBlock.TextAlignment" Value="Center" />
@@ -26,53 +23,45 @@
             </Setter.Value>
         </Setter>
     </Style>
-    
     <Style TargetType="Menu" x:Key="StyleOfMenu">
         <Setter Property="Width" Value="Auto"/>
         <Setter Property="Height" Value="23"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="FontSize" Value="13"/>
     </Style>
-    
     <Style TargetType="TabControl" x:Key="StyleOfTabControl">
         <Setter Property="BorderBrush" Value="Gainsboro"/>
         <Setter Property="Foreground" Value="#FF979494"/>
         <Setter Property="FontSize" Value="18"/>
         <Setter Property="Margin" Value="5"/>
     </Style>
-    
     <Style TargetType="Border" x:Key="BorderControlTemplate">
         <Setter Property="BorderThickness" Value="1,1,1,0"/>
         <Setter Property="BorderBrush" Value="Gainsboro"/>
         <Setter Property="CornerRadius" Value="4,4,0,0"/>
         <Setter Property="Margin" Value="2,0"/>
     </Style>
-    
     <Style TargetType="ContentPresenter" x:Key="ContentPresenterTemplate">
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="Margin" Value="10,2"/>
     </Style>
-    
     <Style TargetType="TextBox" x:Key="TextBoxTabOfCheckOut">
         <Setter Property="Margin" Value="5,5,5,5"/>
         <Setter Property="FontSize" Value="13"/>
         <Setter Property="Background" Value="WhiteSmoke"/>
         <Setter  Property="FontFamily" Value="Arial"/>
     </Style>
-
     <Style TargetType="ListView" x:Key="ListViewTabOfCheckOut">
         <Setter Property="Margin" Value="10,10"/>
         <Setter Property="FontSize" Value="13"/>
         <Setter  Property="FontFamily" Value="Arial"/>
     </Style>
-
     <Style TargetType="Label" x:Key="LabelCheck">
         <Setter Property="FontWeight" Value="Bold"/>
         <Setter Property="Margin" Value="15,0,0,0"/>
         <Setter  Property="FontFamily" Value="Arial"/>
     </Style>
-
     <Style TargetType="TextBox" x:Key="TextBoxCheck">
         <Setter Property="Background" Value="AliceBlue"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
@@ -80,5 +69,33 @@
         <Setter Property="FontSize" Value="13"/>
         <Setter Property="Margin" Value="0,0,5,0"/>
         <Setter Property="Height" Value="20"/>
+    </Style>
+    <Style TargetType="Label" x:Key="LblNewBuyer">
+        <Setter Property="FontFamily" Value="Arial"/>
+        <Setter Property="FontSize" Value="14"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+    </Style>
+    <Style TargetType="Label" BasedOn="{StaticResource LblNewBuyer}" x:Key="GeneralLblNewBuyer">
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="FontSize" Value="18"/>
+    </Style>
+    <Style TargetType="TextBox" x:Key="TxtBoxNewBuyer">
+        <Setter Property="Background" Value="Azure"/>
+        <Setter Property="FontFamily" Value="Arial"/>
+        <Setter Property="FontSize" Value="14"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="Width" Value="180"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+    </Style>
+    <Style TargetType="Grid" x:Key="GeneralGridCheckIn">
+        <Setter Property="Background" Value="#3A76AB"/>
+        <Setter Property="Margin" Value="5,10,5,5"/>
+    </Style>
+    <Style TargetType="Button" x:Key="MainButtonCheckIn">
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="Margin" Value="20,3,20,3"/>
+        <Setter Property="Foreground" Value="Black"/>
+        <Setter Property="Background" Value="#F6BB94"/>
     </Style>
 </ResourceDictionary>
