--- a/MngrPaycheck.Administrator/View/Product/Pages/AddParameter.xaml
+++ b/MngrPaycheck.Administrator/View/Product/Pages/AddParameter.xaml
@@ -20,7 +20,7 @@
             <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
 
-        <Label Grid.Row="0" Grid.ColumnSpan="2" Style="{StaticResource TopSign}">Add type to products</Label>
+        <Label Grid.Row="0" Grid.ColumnSpan="2" Style="{StaticResource TopSign}">Add parameter to products</Label>
         <Border Grid.Row="1" Grid.ColumnSpan="2" Style="{StaticResource Border}">
             <ToolBar Style="{StaticResource ToolBar}">
                 <Menu Style="{StaticResource TopMenu}">
